@@ -1,5 +1,10 @@
 2004-09-18  Bruno Haible  <bruno@clisp.org>
 
+	* pathname.d (LOGICAL-PATHNAME): Signal an error if the argument is
+	a string without host specification.
+
+2004-09-18  Bruno Haible  <bruno@clisp.org>
+
 	* aridecl.d (SF_exp_mid, SF_exp_high): Use the IEEE single-float
 	values.
 	Fixes problem introduced on 1999-08-07.
